# Codex-Mate

./: AGENTS.md  README.md  pyproject.toml  setup.bat
codex_mate/: app_paths.py  autostart.py  cli.py  doctor.py  file_tree.py  helper_server.py  history_sync.py  installers.py  launcher.py  storage_adapter.py  updater.py  watcher.py  windows_installer.py
codex_mate/inject/: renderer-inject.js
tests/: test_app_paths.py  test_autostart.py  test_doctor.py  test_file_tree.py  test_helper_server.py  test_history_sync.py  test_installers.py  test_launcher_cli.py  test_readme.py  test_renderer_script.py  test_setup_bat.py  test_storage_adapter.py  test_updater.py  test_watcher.py  test_windows_installer.py
